--- a/app/views/earnings/index.erb
+++ b/app/views/earnings/index.erb
@@ -2,6 +2,8 @@
   <canvas id="jpy_balance"></canvas>
   <canvas id="btc_balance"></canvas>
   <canvas id="btc_price"></canvas>
+  <canvas id="profit"></canvas>
+  <canvas id="profit_rate"></canvas>
 </div>
 <script>
   const ctx1 = document.getElementById("jpy_balance").getContext("2d");
@@ -44,6 +46,38 @@
       datasets: [{
         label: "BTC価格",
         data: <%= @coincheck_btc_price %>,
+        borderColor: "rgba(255, 50, 132, 1.0)",
+        fill: false,
+      }]
+    },
+  });
+</script>
+
+<script>
+  const ctx4 = document.getElementById("profit").getContext("2d");
+  const profit = new Chart(ctx4, {
+    type: "line",
+    data: {
+      labels: <%= @created_on.to_json.html_safe %>,
+      datasets: [{
+        label: "利益",
+        data: <%= @profit %>,
+        borderColor: "rgba(255, 50, 132, 1.0)",
+        fill: false,
+      }]
+    },
+  });
+</script>
+
+<script>
+  const ctx5 = document.getElementById("profit_rate").getContext("2d");
+  const profit_rate = new Chart(ctx5, {
+    type: "line",
+    data: {
+      labels: <%= @created_on.to_json.html_safe %>,
+      datasets: [{
+        label: "利益率",
+        data: <%= @profit_rate %>,
         borderColor: "rgba(255, 50, 132, 1.0)",
         fill: false,
       }]
