--- a/app/views/earnings/index.erb
+++ b/app/views/earnings/index.erb
@@ -1,11 +1,11 @@
 <div class="grid_container">
   <header class="grid_item_nav">
-    <nav class="flex_container">
+    <nav class="flex_container_between">
       <div>
-        <p>humberger icon</p>
+        <p><i class="fas fa-bars fa-2x"></i></p>
       </div>
-      <ul class="flex_container">
-        <li><p>mail icon</p></li>
+      <ul class="flex_container_between">
+        <li><i class="far fa-envelope fa-2x"></i></li>
         <li><p>user icon</p></li>
       </ul>
     </nav>
@@ -17,25 +17,74 @@
   </article>
 
   <article class="grid_item_list">
-    <div class="flex_container">
-      <section>
-        <span>icon. Total JPY Blance</span>
-        <span>icon. from last week</span>
+    <div class="flex_container_around">
+      <section class="list_style">
+        <span><i class="fas fa-yen-sign"></i> Total Balance</span>
+        <p class="value">68440</p>
+        <span>icon. from last day</span>
       </section>
-      <section>
-        <span>icon. Total JPY Blance</span>
-        <p>100</p>
-        <span>icon. from last week</span>
+      <section class="list_style">
+        <span><i class="fab fa-bitcoin"></i> BTC Holdings</span>
+        <p class="value">0.206</p>
+        <span>icon. from last day</span>
       </section>
-      <section>
-        <span>icon. Total JPY Blance</span>
-        <p>100</p>
-        <span>icon. from last week</span>
+      <section class="list_style">
+        <span><i class="fas fa-yen-sign"></i> Profit(last day)</span>
+        <p class="value">966</p>
+        <span>icon. from last day</span>
+      </section>
+      <section class="list_style">
+        <span><i class="fas fa-yen-sign"></i> Profit(30 days)</span>
+        <p class="value">30000</p>
+        <span>icon. from 30 days</span>
+      </section>
+      <section class="list_style">
+        <span><i class="fas fa-percent"></i> Profit rate(last day)</span>
+        <p class="value">0.141</p>
+        <span>icon. from last day</span>
+      </section>
+      <section class="list_style">
+        <span><i class="fas fa-percent"></i> Profit rate(30 days)</span>
+        <p class="value">1.25</p>
+        <span>icon. from 30 days</span>
       </section>
     </div>
   </article>
 
   <article class="grid_item_graph">
-    <canvas id="jpy_balance"></canvas>
+    <section class="flex_container_between border_bottom">
+      <h3>JPY Balance</h3>
+      <h3>change graph</h3>
+    </section>
+    <section class="float">
+      <div class="graph_size">
+        <canvas id="jpy_balance"></canvas>
+      </div>
+      <div class="graph_item_size">
+        <h4>Each Exchange</h4>
+        <ul class="clear graph_item_list border_top">
+          <li>Coincheck</li>
+          <ul>
+            <li>100</li>
+          </ul>
+          <li>Liguid</li>
+          <ul>
+            <li>100</li>
+          </ul>
+          <li>Total Balance</li>
+          <ul>
+            <li>100</li>
+          </ul>
+          <li>Total Balance</li>
+          <ul>
+            <li>100</li>
+          </ul>
+          <li>Total Balance</li>
+          <ul>
+            <li>100</li>
+          </ul>
+        </ul>
+      </div>
+    </section>
   </article>
 </div>
