modify nav menu layout

--- a/app/assets/stylesheets/earnings.scss
+++ b/app/assets/stylesheets/earnings.scss
@@ -70,6 +70,14 @@ ul {
   background: #EDEDED;
 }
 
+.nav_style {
+  margin: 10px 15px;
+}
+
+.nav_style li {
+  margin: 10px 10px 0;
+}
+
 .grid_item_list {
   grid-row: 2 /3 ;
   grid-column: 2 /3 ;
