--- a/app/views/earnings/index.erb
+++ b/app/views/earnings/index.erb
@@ -1,12 +1,12 @@
 <div class="grid_container">
   <header class="grid_item_nav">
     <nav class="flex_container_between">
-      <div>
+      <div class="nav_style">
         <p><i class="fas fa-bars fa-2x"></i></p>
       </div>
-      <ul class="flex_container_between">
-        <li><i class="far fa-envelope fa-2x"></i></li>
-        <li><p>user icon</p></li>
+      <ul class="flex_container_between nav_style">
+        <li><span class="far fa-envelope fa-2x"></span></li>
+        <li><span>user icon</span></li>
       </ul>
     </nav>
   </header>
