modify web layout

--- a/app/views/earnings/index.erb
+++ b/app/views/earnings/index.erb
@@ -1,5 +1,5 @@
 <div class="grid_container">
-  <header class="grid_item_nav">
+  <header class="grid_item_header">
     <nav class="flex_container_between">
       <div class="nav_style">
         <p><i class="fas fa-bars fa-2x"></i></p>
@@ -12,8 +12,14 @@
   </header>
 
   <article class="grid_item_sidebar">
-    <p>title</p>
-    <p>home</p>
+    <div>
+      <h1><i class="fab fa-bitcoin"></i> Bosshoot</h1>
+    </div>
+    <div>
+    <ul class="sidebar_list">
+      <li><i class="fas fa-home"></i> Dashboard</li>
+      <li><i class="fas fa-cog"></i> Setting</li>
+    </ul>
   </article>
 
   <article class="grid_item_list">
@@ -24,7 +30,7 @@
         <span>icon. from last day</span>
       </section>
       <section class="list_style">
-        <span><i class="fab fa-bitcoin"></i> BTC Holdings</span>
+        <span><i class="fab fa-btc"></i> BTC Holdings</span>
         <p class="value">0.206</p>
         <span>icon. from last day</span>
       </section>
@@ -62,7 +68,7 @@
       </div>
       <div class="graph_item_size">
         <h4>Each Exchange</h4>
-        <ul class="clear graph_item_list border_top">
+        <ul class="clear graph_list border_top">
           <li>Coincheck</li>
           <ul>
             <li>100</li>
@@ -87,4 +93,10 @@
       </div>
     </section>
   </article>
+
+  <footer class="grid_item_footer">
+    <div class="flex_container_center">
+      <p>exchange links</p>
+    </div>
+  </footer>
 </div>
