--- a/app/assets/stylesheets/earnings.scss
+++ b/app/assets/stylesheets/earnings.scss
@@ -11,6 +11,13 @@ body {
   margin: 0;
 }
 
+h1 {
+  font-size: 24px;
+  color: #FFFFFF;
+  font-weight: 500;
+  text-align: center;
+}
+
 h3 {
   font-size: 24px;
   margin: 10px 15px;
@@ -50,6 +57,11 @@ ul {
   justify-content: space-around;
 }
 
+.flex_container_center {
+  display: flex;
+  justify-content: center;
+}
+
 .float div {
   float: left;
 }
@@ -59,12 +71,32 @@ ul {
 }
 
 .grid_item_sidebar {
-  grid-row: 1 / 4;
+  grid-row: 1 / 5;
   grid-column: 1 / 2;
   background: #2A3F54;
 }
 
-.grid_item_nav {
+.grid_item_sidebar i {
+  margin-right: 10px;
+}
+
+.sidebar_list {
+  font-size: 15px;
+  font-weight: 400;
+  color: #FFFFFF;
+  margin: 0;
+  padding: 10px 0 0 20px;
+}
+
+.sidebar_list li {
+  margin-bottom: 20px;
+}
+
+.sidebar_list i {
+  margin-right: 10px;
+}
+
+.grid_item_header {
   grid-row: 1 / 2;
   grid-column: 2 / 3;
   background: #EDEDED;
@@ -126,8 +158,14 @@ ul {
   height: 30vh;
 }
 
-.graph_item_list {
+.graph_list {
   font-size: 15px;
   margin: 0;
   padding: 5px 0 0 0;
+}
+
+.grid_item_footer {
+  grid-row: 4 / 5;
+  grid-column: 2 / 3;
+  background: #FFFFFF;
 }
