--- a/app/assets/stylesheets/earnings.scss
+++ b/app/assets/stylesheets/earnings.scss
@@ -143,7 +143,7 @@ ul {
   grid-row: 3 / 4;
   grid-column: 2 / 3;
   background: #FFFFFF;
-  margin-left: 20px;
+  margin: 10px 20px 20px;
 }
 
 .graph_size {
