--- a/app/assets/stylesheets/earnings.scss
+++ b/app/assets/stylesheets/earnings.scss
@@ -150,11 +150,11 @@ ul {
   position: relative;
   width: 65vw;
   height: 30vh;
-  margin: 0 0 10px 10px;
+  margin: 0 20px 10px 10px;
 }
 
 .graph_item_size {
-  width: 15vw;
+  width: 20vw;
   height: 30vh;
 }
 
