rename index to dashboard and modify view

--- a/app/views/earnings/dashboard.erb
+++ b/app/views/earnings/dashboard.erb
@@ -26,7 +26,7 @@
     <div class="flex_container_around">
       <section class="list_style">
         <span><i class="fas fa-yen-sign"></i> Total Balance</span>
-        <p class="value">68440</p>
+        <p class="value"><%= @total_balance %></p>
         <span>icon. from last day</span>
       </section>
       <section class="list_style">
@@ -36,7 +36,7 @@
       </section>
       <section class="list_style">
         <span><i class="fas fa-yen-sign"></i> Profit(last day)</span>
-        <p class="value">966</p>
+        <p class="value"><%= @profit %></p>
         <span>icon. from last day</span>
       </section>
       <section class="list_style">
@@ -46,7 +46,7 @@
       </section>
       <section class="list_style">
         <span><i class="fas fa-percent"></i> Profit rate(last day)</span>
-        <p class="value">0.141</p>
+        <p class="value"><%= @profit_rate %></p>
         <span>icon. from last day</span>
       </section>
       <section class="list_style">
