--- a/app/assets/stylesheets/earnings.scss
+++ b/app/assets/stylesheets/earnings.scss
@@ -139,6 +139,11 @@ ul {
   margin-block-end: 0;
 }
 
+.item_description {
+  margin-block-start: 0;
+  margin-block-end: 0;
+}
+
 .grid_item_graph {
   grid-row: 3 / 4;
   grid-column: 2 / 3;
