--- a/app/views/earnings/dashboard.erb
+++ b/app/views/earnings/dashboard.erb
@@ -63,40 +63,26 @@
   </article>
 
   <article class="grid_item_graph">
-    <section class="flex_container_between border_bottom">
-      <h3>JPY Balance</h3>
-      <h3>change graph</h3>
-    </section>
-    <section class="float">
-      <div class="graph_size">
-        <canvas id="jpy_balance"></canvas>
-      </div>
-      <div class="graph_item_size">
-        <h4>Each Exchange</h4>
-        <ul class="clear graph_list border_top">
-          <li>Coincheck</li>
-          <ul>
-            <li>100</li>
-          </ul>
-          <li>Liguid</li>
-          <ul>
-            <li>100</li>
-          </ul>
-          <li>Total Balance</li>
-          <ul>
-            <li>100</li>
-          </ul>
-          <li>Total Balance</li>
-          <ul>
-            <li>100</li>
-          </ul>
-          <li>Total Balance</li>
-          <ul>
-            <li>100</li>
-          </ul>
-        </ul>
-      </div>
-    </section>
+    <div class="flex_container_between">
+      <section>
+        <div class="flex_container_between border_bottom">
+          <h3>JPY Balance</h3>
+          <h3>1 week</h3>
+        </div>
+        <div class="graph_size">
+          <canvas id="jpy_balance"></canvas>
+        </div>
+      </section>
+      <section>
+        <div class="flex_container_between border_bottom">
+          <h3>Profit</h3>
+          <h3>1 week</h3>
+        </div>
+        <div class="graph_size">
+          <canvas id="profit"></canvas>
+        </div>
+      </section>
+    </div>
   </article>
 
   <footer class="grid_item_footer">
